--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "bignumber.js": "^9.0.1",
     "date-fns": "^2.25.0",
-    "debug": "^4.3.2",
     "discord.js": "^13.2.0",
     "node-fetch": "^2.6.1",
+    "prettier": "^2.5.1",
     "typescript": "^4.4.3",
     "web3": "^1.6.0"
   },
@@ -25,7 +25,6 @@
     "npm": ">=7.0.0"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.7",
     "@types/node-fetch": "^2.5.12",
     "web3-core": "^1.6.0",
     "web3-utils": "^1.6.0"
